<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="170dp"
    android:layout_height="200dp"
    android:layout_margin="8dp"
    android:backgroundTint="@color/blue"
    app:cardCornerRadius="32dp"
    app:cardElevation="4dp">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@mipmap/ic_rightside"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:layout_gravity="bottom"
        android:background="@drawable/box_rounded_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:maxLines="2"
            android:text="@string/volunteer_event_title"
            android:textColor="@color/darkBlue"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:maxLines="1"
            android:text="@string/org_name"
            android:textColor="@color/darkBlue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:maxLines="3"
            android:text="@string/volunteer_event_description_max_3_lines" />

    </LinearLayout>


</androidx.cardview.widget.CardView>