<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/upcomingEventsCard"
    android:layout_height="100dp"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="32dp"
    app:cardElevation="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground">

    <ImageView
        android:id="@+id/UpcomingEventsImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_rightside"
        android:background="@drawable/box_rounded_white"
        android:clipToOutline="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/UpcomingEventsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:maxLines="2"
            android:text="@string/volunteer_event_title"
            android:textColor="@color/darkBlue"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/UpcomingEventsOrganizer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto_condensed_bold"
                android:maxLines="1"
                android:text="@string/org_name"
                android:textColor="@color/blue" />

            <TextView
                android:id="@+id/UpcomingEventsDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto_condensed_regular"
                android:maxLines="1"
                android:text="date"/>

        </LinearLayout>



        <TextView
            android:id="@+id/UpcomingEventsDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:maxLines="3"
            android:text="@string/volunteer_event_description_max_3_lines" />

    </LinearLayout>



</androidx.cardview.widget.CardView>