<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    tools:context=".QuizIntroPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="Today's Quiz:"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <!--bookmark nanti set onclicked: fill colour lightgrey and vice versa-->
        <include layout="@layout/card_quiz_intro" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/box_rounded_blue"
                android:drawablePadding="8dp"
                android:fontFamily="@font/roboto_bold"
                android:padding="8dp"
                android:text="@string/x_quizzes"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/icon_paperpen_black" />

        </TableRow>

        <TextView
            android:id="@+id/QuizDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:text="@string/course_desc_no_limit_lines"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/QuizIntroStartButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/green"
            android:drawableEnd="@drawable/icon_website_white"
            android:drawablePadding="8dp"
            android:textAllCaps="true"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/access_course"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>

</FrameLayout>